Thu Jan 27 10:48:55 CET 2011
	Removing bogus assertion in basic authentication code (#1651). -CG/timn

Tue Jan 25 14:10:45 CET 2011
	Releasing libmicrohttpd 0.9.6. -CG

Mon Jan 24 16:36:35 CET 2011
	Fixing compilation error if DAUTH_SUPPORT was 0 (#1646). -CG/bplant

Tue Jan 18 23:58:09 CET 2011
	Fixing hash calculation in digest auth; old function had
	collisions causing the browser to challenge users for
	authentication too often. -CG/AW

Fri Jan 14 19:19:45 CET 2011
	Removing dead code, adding missing new symbols to export list.
	Fixed two missing NULL checks after malloc operations. -CG

Mon Jan 10 14:07:33 CET 2011
	Releasing libmicrohttpd 0.9.5. -CG

Wed Jan  5 15:20:11 CET 2011
	Fixing double-locking on non-Linux platforms when using
	MHD_create_response_from_fd (#1639). -CG
	Avoid use of strndup for better portability (#1636). -CG

Tue Jan  4 13:07:21 CET 2011
	Added MHD_create_response_from_buffer, deprecating
	MHD_create_response_from_data.  Deprecating
	MHD_create_response_from_fd as well. -CG

Sun Dec 26 00:02:15 CET 2010
	Releasing libmicrohttpd 0.9.4. -CG

Sat Dec 25 21:57:14 CET 2010
	Adding support for basic authentication.
	Documented how to obtain client SSL certificates in tutorial. -MS

Thu Dec 23 15:40:36 CET 2010
	Increasing nonce length to 128 to support digest authentication
	with Opera (see #1633).

Mon Dec 20 21:22:57 CET 2010
	Added macro MHD_LONG_LONG to allow change of MHD's "long long" use
	to some other type on platforms that do not support "long long"
	(Mantis #1631). -CG/bplant

Sun Dec 19 19:54:15 CET 2010
	Added 'MHD_create_response_from_fd_at_offset'. -CG

Sun Dec 19 15:16:16 CET 2010
	Fixing --enable and --disable configure options to behave properly. -CG

Sun Dec 19 13:46:52 CET 2010
	Added option to specify size of stacks for threads created by MHD. -CG

Tue Nov 23 09:41:00 CET 2010
	Releasing libmicrohttpd 0.9.3. -CG

Thu Nov 18 23:10:36 CET 2010
	Fixing #1619 (testcases not working with NSS on Fedora). -CG/timn
